--- a/rana_naidu.html
+++ b/rana_naidu.html
@@ -13,44 +13,62 @@
 	<div class="row">
 
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/i08tcmRa-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-1</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/YWrI6P9I-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-2</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/5zKnBxkk-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-3</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/lBOnPqQN-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-4</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/v1nIG0tU-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-5</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/AQis27Wd-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-6</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/OuUlfTpk-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-7</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/zNpBlu4b-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-8</p>
 		</div>
+
+
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+		<a href="https://cdn.jwplayer.com/players/iUAk1QZ0-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
 			<p>Rana Naidu Episide-9</p>
 		</div>
+
+		
 		<div class="bg d-flex col-md-12">
-		<a href=""> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
-			<p>Rana Naidu Episide-10</p>
+		<a href="https://cdn.jwplayer.com/players/yj6vY9D4-KRx90UyS.html"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+			<p>Rana Naidu Episide-1o</p>
 		</div>
 		
 
