--- a/index.html
+++ b/index.html
@@ -1,58 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>My Blog</title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Video Showcase</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
-    <div class="pos-f-t">
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark p-4">
-      <h4 class="text-white">Collapsed content</h4>
-      <span class="text-muted">Toggleable via the navbar brand.</span>
-    </div>
-  </div>
-  <nav class="navbar navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </nav>
-</div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#"><img class="nav-img" src="https://res.cloudinary.com/dal4gg4v9/image/upload/v1686562474/YASHFLIX-12-6-2023_gviqam.png" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-    <div class="content m-3 mt-1 p-4">
-        <div class="row">
-            <div class="shadow mt-1 col-sm-6 col-lg-3">
-                <img src="https://m.media-amazon.com/images/M/MV5BNDQ4MTE5YzItMmY2OS00NGViLTlkYjctZWVhYTdhZWY4N2UyXkEyXkFqcGdeQXVyMTEzMTI1Mjk3._V1_.jpg" width="100%" height="250px" />
-              <a href="rana_naidu.html">   <h1 class="p-1 ">Rana Naidu</h1> </a> 
+    <section id="projects" class="">
+        <div class="container ">
+            <div class="d-flex flex-row justify-content-center">
+                <h2 class="h2  mb-2 mt-2 ">YASHFLIX</h2>
             </div>
-            <div class="shadow mt-1  col-sm-6 col-lg-3">
-                <img src="https://lumiere-a.akamaihd.net/v1/images/p_20cs_avatarwayofwater_mayupdate_1710_260aa445.jpeg" width="100%" height="250px" />
-                <h1 class="p-1 ">Avatar - 2</h1>
-            </div>
-            
-             <div class="shadow mt-2  col-sm-6 col-lg-3">
-                <img src="https://m.media-amazon.com/images/M/MV5BODliMjM1OGItMmM3Yy00YzhkLWFkYmEtOTNmNWM2MDAyN2EzXkEyXkFqcGdeQXVyMTMzNzIyNDc1._V1_.jpg" width="100%" height="250px" />
-                <a href="https://cdn.jwplayer.com/previews/CjkKIddO" target="_blank"><h1 class="p-1">Virupaksha</h1></a>
-            </div>
-             <div class="shadow mt-2  col-sm-6 col-lg-3">
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEht7y_opd4WcIStmhp3gMDaZ532r0tJHURBVDFce_HYsay7YCmSe0PDi67UJt7v1LdvVkg4Z8MVcz87jxq3iHSkYLrG_jsPxEkAmFYn1Q_SsicJ0yv2_0J-1OmCB6I1vzkg66KH2EiK0xXn85k5-R-VqMmWA-K8lkwo-k5KgqsnI66MQGpAceA9ZLRXNA/s16000/6F990CA0-728A-43DF-BE8C-BEC90D0E8331.jpeg" width="100%" height="250px" />
-                <h1 class="p-1">Bedurulanka 2012</h1>
-            </div>
-            <div class="shadow mt-2  col-sm-6 col-lg-3">
-                <img src="https://m.media-amazon.com/images/M/MV5BZjk5OGNmZTgtZDAxNS00MGIzLTgwMDEtYTNjMDM5ZDVlNmJkXkEyXkFqcGdeQXVyMTEzNzg0Mjkx._V1_.jpg" width="100%" height="250px" />
-                <h1 class="p-1">Custody</h1>
+
+            <div class="row">
+                <div class=" col-6 col-lg-3 col-md-4 mb-3">
+                    <a href="rana_naidu.html">
+                        <div class=" shadow-lg card">
+                            <img class="image" src="https://m.media-amazon.com/images/M/MV5BNDQ4MTE5YzItMmY2OS00NGViLTlkYjctZWVhYTdhZWY4N2UyXkEyXkFqcGdeQXVyMTEzMTI1Mjk3._V1_.jpg" />
+
+                            <h1 class="p-1 ">Rana Naidu</h1>
+
+                        </div>
+                    </a>
+                </div>
+                <div class=" col-6 col-lg-3 col-md-4 mb-4">
+                    <div class="shadow-lg card">
+                        <img class="image" src="https://lumiere-a.akamaihd.net/v1/images/p_20cs_avatarwayofwater_mayupdate_1710_260aa445.jpeg" />
+                        <h1 class="p-1 ">Avatar - 2</h1>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://cdn.jwplayer.com/previews/CjkKIddO" target="_blank">
+                        <div class="shadow-lg card">
+                            <img class="image" src="https://m.media-amazon.com/images/M/MV5BODliMjM1OGItMmM3Yy00YzhkLWFkYmEtOTNmNWM2MDAyN2EzXkEyXkFqcGdeQXVyMTMzNzIyNDc1._V1_.jpg" />
+
+                            <h1 class="p-1">Virupaksha</h1>
+
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
+    </section>
 
-        <!-- Your blog content goes here -->
+    <section id="about" class="bg-light py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+    </section>
 
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Contact Me</h2>
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your Name">
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control" placeholder="Your Email">
+                </div>
+                <div class="form-group">
+                    <textarea class="form-control" rows="3" placeholder="Your Message"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+            </form>
+        </div>
+    </section>
 
+    <footer class="bg-dark text-white text-center py-3">
+        &copy; 2023 Project Showcase. All rights reserved.
+    </footer>
 
-
-</div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
