--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar top-fixed navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#"><img class="nav-img" src="https://res.cloudinary.com/dal4gg4v9/image/upload/v1686562474/YASHFLIX-12-6-2023_gviqam.png" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
                     </div>
                 </div>
                 <div class="col-6 col-lg-3 col-md-4 mb-4">
-                    <a href="https://cdn.jwplayer.com/previews/CjkKIddO" target="_blank">
+                    <a href="https://cdn.jwplayer.com/previews/CjkKIddO?sig=eed7bee0eebedb256f242a5cefad7e89&exp=1687066989" target="_blank">
                         <div class="shadow-lg card">
                             <img class="image" src="https://m.media-amazon.com/images/M/MV5BODliMjM1OGItMmM3Yy00YzhkLWFkYmEtOTNmNWM2MDAyN2EzXkEyXkFqcGdeQXVyMTMzNzIyNDc1._V1_.jpg" />
 
