--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                         <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#karthikeya-movies">karthikeya Movies</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
@@ -78,13 +81,54 @@
                     </a>
 
                 </div>
+
+                <div class=" col-6 col-lg-3 col-md-4 mb-3">
+                    <a href="rana_naidu.html">
+                        <div class=" shadow-lg card">
+                            <img class="image" src="https://www.thenewsminute.com/sites/default/files/styles/news_detail/public/Sivakarthikeyan_Doctor_030221_1200_DN.jpg?itok=Zp_8RTSe" />
+
+                            <h1 class="p-1 ">Doctor</h1>
+
+                        </div>
+                    </a>
+                </div>
+                <div class=" col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://archive.org/embed/eeshwarudu_202306">
+                        <div class="shadow-lg card">
+                        <img class="image" src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/dasara-et00316318-1679638362.jpg" />
+                        <h1 class="p-1 ">Dasara</h1>
+                    </div>
+                    </a>
+
+                </div>
+                <div class="col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://cdn.jwplayer.com/previews/CjkKIddO?sig=eed7bee0eebedb256f242a5cefad7e89&exp=1687066989" target="_blank">
+                        <div class="shadow-lg card">
+                            <img class="image" src="https://m.media-amazon.com/images/M/MV5BYTcyZjA0OTYtOTA4OC00M2UxLThkODUtYzNiMWI5NWRhMGM5XkEyXkFqcGdeQXVyMTUzNTgzNzM0._V1_.jpg" />
+
+                            <h1 class="p-1">Adipurush (comingsoon)</h1>
+
+                        </div>
+                    </a>
+                </div>
+                 <div class=" col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://archive.org/embed/eeshwarudu_202306">
+                    <div class="shadow-lg card">
+                       <img class="image" src="https://c.saavncdn.com/800/Bichagadu-2-Telugu-2022-20220316150554-500x500.jpg" />
+                        <h1 class="p-1 ">Bichagadu 2</h1>
+                    </div>
+                    </a>
+
+                </div>
             </div>
         </div>
 
 
 
+<div  id="karthikeya-movies" class="kar-bg">
+    <h1 class="pl-4 pt-2"> Karthikeya Movies</h1>
 
-<div id="carouselExampleIndicators" class="carousel slide rx100 p-4 " data-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide rx100 p-4 " data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -122,6 +166,8 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+</div>
+
     </section>
 
     <section id="about" class="bg-light py-5">
