--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
 
-    <section id="projects" class="">
+    <section id="projects" class="bg-light">
         <div class="container ">
             <div class="d-flex flex-row justify-content-center">
                 <h2 class="h2  mb-2 mt-2 ">YASHFLIX</h2>
@@ -45,7 +45,7 @@
             <div class="row">
                 
                 <div class=" col-6 col-lg-3 col-md-4 mb-4">
-                    <a href="https://archive.org/embed/eeshwarudu_202306">
+                    <a href="https://drive.google.com/file/d/1IsO9iKrkNv-fs8Imvy6fg7vajOzRI-IT/preview">
                                             <div class="shadow-lg card">
                         <img class="image" src="https://lumiere-a.akamaihd.net/v1/images/p_20cs_avatarwayofwater_mayupdate_1710_260aa445.jpeg" />
                         <h1 class="p-1 ">Avatar - 2</h1>
@@ -95,6 +95,15 @@
 
                 </div>
                 <div class=" col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://drive.google.com/file/d/1voZ7clhq0iWdkPEnb0ddVx_MlwOexJB1/preview">
+                    <div class="shadow-lg card">
+                       <img class="image" src="https://c.saavncdn.com/833/Por-Thozhil-Theme-Song-Unknown-2023-20230531121154-500x500.jpg" />
+                        <h1 class="p-1 ">Por Thozhil</h1>
+                    </div>
+                    </a>
+
+                </div>
+                <div class=" col-6 col-lg-3 col-md-4 mb-4">
                     <a href="https://cdn.jwplayer.com/players/ehOQyeb6-d4FPxZgN.html">
                     <div class="shadow-lg card">
                        <img class="image" src="https://images.ottplay.com/posters/Hidimbha_2022_movie_poster_1_930.jpeg?impolicy=ottplay-20210210&width=1200&height=675" />
@@ -103,6 +112,18 @@
                     </a>
 
                 </div>
+
+                 <div class=" col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://cdn.jwplayer.com/players/kspCD5qs-d4FPxZgN.html">
+                    <div class="shadow-lg card">
+                       <img class="image" src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/mahaveerudu-et00334330-1689059014.jpg" />
+                        <h1 class="p-1 ">Mahaveerudu</h1>
+                    </div>
+                    </a>
+
+                </div>
+
+
             </div>
         </div>
 
@@ -125,7 +146,7 @@
       <img class=" car-img" src="https://1.bp.blogspot.com/-xL3QvxBR9ME/WvE05T82dVI/AAAAAAAALYc/BlQJaWmiVnQ8MgIs24Xa57LYCqRAb9sAACLcBGAs/s1600/Rx-100-movie-poster-1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class=" car-img" src="https://1.bp.blogspot.com/-GqADJdPgw7Y/XoKxCo0fFSI/AAAAAAAACnM/_5PlszXi_m0bbzRPAXrjkm0RtqSlkDNzACLcBGAsYHQ/w1200-h630-p-k-no-nu/Guna%2B369%2Bhindi%2Bdubbed.jpg" alt="Second slide">
+      <img class=" car-img" src="https://assets-in.bmscdn.com/discovery-catalog/events/et00341419-hkxqhpkpyx-landscape.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class=" car-img" src="https://assets-in.bmscdn.com/discovery-catalog/events/et00113908-vzvlhlhklw-landscape.jpg" alt="Third slide">
