--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <a href="#baby"><div  class="text-center row m-4">
-        <div class="col-12"><h1 style="color:red;">PREMIERE'S NOW</h1></div>
+        <div class="col-12"><h1 class="p-1" style="color:red;">PREMIERE'S NOW</h1></div>
         <img class="premiere"src="https://assets-in.bmscdn.com/discovery-catalog/events/et00363274-mwlecgtrmp-landscape.jpg">
     </div></a>
 
