--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             </div>
         </nav>
     </header>
-    <a href="#baby"><div  class="text-center row m-4">
+    <a href="#bro"><div  class="text-center row m-4">
         <div class="col-12"><h1 class="p-1 pt-1 pb-1" style="color:red;">PREMIERE'S NOW</h1></div>
-        <img class="premiere"src="https://assets-in.bmscdn.com/discovery-catalog/events/et00363274-mwlecgtrmp-landscape.jpg">
+        <img class="premiere"src="https://assets-in.bmscdn.com/discovery-catalog/events/et00360172-enqjxrgzkj-landscape.jpg">
     </div></a>
 
     <section id="projects" class="bg-light">
@@ -47,6 +47,15 @@
             </div>
 
             <div class="row">
+
+                <div id="bro"class=" col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://drive.google.com/file/d/1M1OVxuj9O_x0ojKsuSPFSEW29tcZiULw/preview">
+                                            <div class="shadow-lg card">
+                        <img class="image" src="https://data1.ibtimes.co.in/en/full/787793/bro-movie.jpg" />
+                        <h1 class="p-1 ">Bro</h1>
+                    </div>
+                    </a>
+                </div>
 
 
                 <div id="baby"class=" col-6 col-lg-3 col-md-4 mb-4">
