--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row">
 
                 <div id="bro"class=" col-6 col-lg-3 col-md-4 mb-4">
-                    <a href="https://drive.google.com/file/d/1M1OVxuj9O_x0ojKsuSPFSEW29tcZiULw/preview">
+                    <a href="https://drive.google.com/file/d/1jk1kk2uQkpR3kTsq7cmYUMzBmFOjaDT_/preview?usp=sharing">
                                             <div class="shadow-lg card">
                         <img class="image" src="https://data1.ibtimes.co.in/en/full/787793/bro-movie.jpg" />
                         <h1 class="p-1 ">Bro</h1>
