--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row">
 
                 <div id="bro"class=" col-6 col-lg-3 col-md-4 mb-4">
-                    <a href="https://drive.google.com/file/d/1jk1kk2uQkpR3kTsq7cmYUMzBmFOjaDT_/preview?usp=sharing">
+                    <a href="https://drive.google.com/file/d/1jk1kk2uQkpR3kTsq7cmYUMzBmFOjaDT_/preview">
                                             <div class="shadow-lg card">
                         <img class="image" src="https://data1.ibtimes.co.in/en/full/787793/bro-movie.jpg" />
                         <h1 class="p-1 ">Bro</h1>
@@ -59,7 +59,7 @@
 
 
                 <div id="baby"class=" col-6 col-lg-3 col-md-4 mb-4">
-                    <a href="https://drive.google.com/file/d/1b1D9s0I5y_YZ5SWg88I_Q2Wq3R9JqIyy/preview?usp=sharing">
+                    <a href="https://drive.google.com/file/d/1b1D9s0I5y_YZ5SWg88I_Q2Wq3R9JqIyy/preview">
                                             <div class="shadow-lg card">
                         <img class="image" src="https://m.media-amazon.com/images/M/MV5BNThmOTIzOGMtOGRlYi00OWZkLWI3Y2EtY2FhZmY5MThmNjBmXkEyXkFqcGdeQXVyNjQ1MDcxNzM@._V1_FMjpg_UX1000_.jpg" />
                         <h1 class="p-1 ">Baby</h1>
