--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             </div>
         </nav>
     </header>
-    <a href="#bro">
+    <a href="#pokiri">
         <div class="text-center row m-4">
             <div class="col-12">
-                <h1 class="p-1 pt-1 pb-1" style="color:red;">PREMIERE'S NOW</h1>
+                <h1 class="p-1 pt-1 pb-1" style="color:red;">STREAMING NOW</h1>
             </div>
-            <img class="premiere" src="https://assets-in.bmscdn.com/discovery-catalog/events/et00360172-enqjxrgzkj-landscape.jpg">
+            <img class="premiere" src="https://assets-in.bmscdn.com/discovery-catalog/events/et00335960-abtkvjprse-landscape.jpg">
         </div>
     </a>
 
@@ -51,6 +51,17 @@
             </div>
 
             <div class="row">
+
+
+                <div id="pokiri" class=" col-sm-4 col-6 col-lg-3 col-md-4 mb-4">
+                    <a href="https://drive.google.com/file/d/1soGl72v2qVWVxTQX_eO5dcLHLmdEEFA1/preview">
+                        <div class="shadow-lg card">
+                            <img class="image" src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/pokiri-et00335960-1659335577.jpg" />
+                            <h1 class="p-1 ">Pokiri</h1>
+                        </div>
+                    </a>
+                </div>
+
 
                 <div id="bro" class=" col-sm-4 col-6 col-lg-3 col-md-4 mb-4">
                     <a href="https://drive.google.com/file/d/1jk1kk2uQkpR3kTsq7cmYUMzBmFOjaDT_/preview">
