--- a/rana_naidu.html
+++ b/rana_naidu.html
@@ -9,19 +9,26 @@
 	<title>BIGG BOSS</title>
 </head>
 <body>
-<div class="container bg">
+
 	
-	<div class="row">
+<div class="container-fluid list">
+	
+	<div class="row ">
 
 		<div class="bg d-flex col-md-12">
 		<a href="https://drive.google.com/file/d/1xJU9YmBJcPyNyHnBRChcuR7huTmyEdmq/preview"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
-			<p>Bigg Boss Episide-1</p>
+			<p>Bigg Boss Episide-1                                     Day-1</p>
 		</div>
 
 
 		<div class="bg d-flex col-md-12">
 		<a href="https://drive.google.com/file/d/1ZGTDkj9H17cprFNMfrSR3XO_o9_yeEUH/preview"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
-			<p>Bigg Boss Episide-2</p>
+			<p>Bigg Boss Episide-2                                     Day-2</p>
+		</div>
+
+		<div class="bg d-flex col-md-12">
+		<a href="https://drive.google.com/file/d/12Wm4fN8WCBMP6Mi1hUMqpqlJ4itq2wGs/view?usp=sharing"> <i class="fa fa-play-circle-o" style="font-size:28px;"></i> </a>	
+			<p>Bigg Boss Episide-3                                     Day-3</p>
 		</div>
 
 
@@ -29,5 +36,6 @@
 
 
 </div>
+
 </body>
 </html>
